<resources>
    <string name="app_name">PuntoCel Manager</string>
    <string name="title_home">Catalogo</string>
    <string name="title_dashboard">desarrollo</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="no_hay_eventos_disponibles">No hay productos disponibles</string>
    <string name="cargando">Cargando...</string>
    <string name="tipos_de_eventos">Tipos de Productos</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="perfil_de_usuario">Perfil de usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="login_fragment">Iniciar Sesión</string>
    <string name="registro">Registro</string>
    <string name="register_fragment">Registro de Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="c_dula">Cédula</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="celular">Celular</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="registrar">Registrar</string>
    <string name="seleccionar_fecha">Seleccionar Fecha</string>
    <string name="gestion_de_eventos">Gestion de inventario</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="a_adir_imagen">Añadir Imagen</string>
    <string name="crear_evento">Crear Producto</string>
    <string name="ejemplo_string1_string2_string3">Ejemplo: String1,String2,String3</string>
    <string name="descripcion_imagenes">esto es una descripcion general para las imagenes</string>
</resources>