<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.view.ManageEventsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- Campo de nombre -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre Evento" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de costo mínimo -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCostoMinimo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputNombre"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edCostoMinimo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Costo mínimo" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de descripción -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputCostoMinimo"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Descripción" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de mini descripción -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMiniDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputDescripcion"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edMiniDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mini Descripción" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón para añadir una imagen -->
    <Button
        android:id="@+id/btnAgregarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_imagen"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputMiniDescripcion" />

    <!-- Campo para añadir un array de Strings -->
    <TextView
        android:id="@+id/tvArrayStrings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Añadir Strings (separados por comas)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAgregarImagen" />

        <EditText
            android:id="@+id/edArrayStrings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_string1_string2_string3"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvArrayStrings" />

    <Button
        android:id="@+id/btnAgregarEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_evento"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edArrayStrings" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>